fix(delivery-android): harden car route compatibility